Fix TaskDetails overflow

--- a/src/components/TaskDetails/TaskDetails.module.scss
+++ b/src/components/TaskDetails/TaskDetails.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  max-height: 90vh;
 
   p {
     color: rgb(112, 112, 112);
